# Intuitive-Care

./: README.md  main.py  pyproject.toml  requirements.txt  rol_procedimentos.csv  rol_procedimentos_atualizado.csv
api/: API Operadoras.postman_collection.json  server.py
database/: Tabelas.sql
frontend/: package-lock.json  package.json
frontend/src/: App.vue
web_scraping/: pdf_to_csv.py  scraper.py
